--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-          integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-          crossorigin="anonymous"/>
-    <link rel="stylesheet" href="src/assets/icons/icomoon/_glyphs.css">
 </head>
-<body>
-<app-header></app-header>
-<app-root></app-root>
+<body class="body">
+
+<header>
+    <app-header></app-header>
+</header>
+<main>
+    <app-root></app-root>
+</main>
+
 </body>
 </html>
