--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="body--body-background-color">
-
+<body class="body
+             body--body-background-color">
 <header>
     <app-header></app-header>
 </header>
